LPS-120576 Fix filter item text overflow

--- a/modules/dxp/apps/portal-workflow/portal-workflow-metrics-web/src/main/resources/META-INF/resources/css/_dropdown.scss
+++ b/modules/dxp/apps/portal-workflow/portal-workflow-metrics-web/src/main/resources/META-INF/resources/css/_dropdown.scss
@@ -10,7 +10,9 @@
 
 	.custom-control-label-text {
 		color: #6b6c7e;
+		display: flex;
 		font-weight: normal;
+		word-break: break-all;
 	}
 
 	&.control-hidden {
